--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -143,3 +143,21 @@
 		}
 	}
 }
+
+.dot-list li,
+.dot-item{
+	position: relative;
+	color: var(--text-grey);
+	padding-left: 16px;
+	&:before{
+		content:'';
+		display: block;
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		background-color: currentColor;
+		position: absolute;
+		left: 0;
+		top: 7px;
+	}
+}
