--- a/src/scss/blocks/_filters-block.scss
+++ b/src/scss/blocks/_filters-block.scss
@@ -8,6 +8,7 @@
 			margin-left: 0;
 		}
 	}
+	.dropdown__button span{color:var(--text-black); font-size: 16px;}
 	@media (max-width: 1023px) {
 		column-gap: 16px;
 		.filter-select{ min-width: 240px;}
@@ -17,17 +18,13 @@
 		row-gap:24px;
 		align-items: flex-start;
 		.filter-select {min-width: unset; width: 100%;}
-				
-			
 	}
 }
 .display-togggle{
 	column-gap:32px;
 	span{color: var(--text-grey);}
 	span, svg{pointer-events: none;}
-	.toggle-item{column-gap:8px; white-space: nowrap;}
+	.toggle-item{column-gap:8px; white-space: nowrap; cursor: pointer; transition: .3s; &:hover{opacity: .7;}}
 	&> *.active span{color: var(--text-black);}
-	@media (max-width: 1023px) {
-		column-gap: 16px;
-	}
+	
 }
