--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -28,5 +28,7 @@ block content
 				span Контакты
 			a(href="stores.html")
 				span Магазины
+			a(href="about.html")
+				span О Бренде
 block variables
 	-var title = "Start page";
