--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@
 @import "sections/_vacance-content.scss";
 @import "sections/_contacts-content.scss";
 @import "sections/_stores-content.scss";
+@import "sections/_about-content.scss";
 
 
 
