--- a/src/pug/blocks/_modal-table-size.pug
+++ b/src/pug/blocks/_modal-table-size.pug
@@ -23,7 +23,7 @@ mixin tableRows(values, numRows)
 			p Предложенные таблицы помогут Вам подобрать куртку подходящего размера.
 		.h2.mb-24 Женщины
 		.size-table-inner.ss-container(ss-container)
-			table.size-table(cellspacing="0")
+			table.size-table
 				thead
 					tr
 						th Размер
