--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -11,7 +11,7 @@ section.main-hero
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
 							source(srcset="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg" type="image/jpg")
 							
-							img(src="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg", alt="img")
+							img.lazy(src="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg", alt="img")
 					//===== slide text ====
 					.hero-slide__text
 						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
@@ -34,7 +34,7 @@ section.main-hero
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
 							source(srcset="https://static.tildacdn.com/tild3739-3038-4462-b265-353563353332/765xNxcollezione-liu.jpg" type="image/jpg")
 							
-							img(src="https://static.tildacdn.com/tild3739-3038-4462-b265-353563353332/765xNxcollezione-liu.jpg", alt="img")
+							img.lazy(src="https://static.tildacdn.com/tild3739-3038-4462-b265-353563353332/765xNxcollezione-liu.jpg", alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
@@ -58,7 +58,7 @@ section.main-hero
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
 							source(srcset="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg" type="image/jpg")
 							
-							img(src="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg", alt="img")
+							img.lazy(src="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg", alt="img")
 					//===== slide text ====
 					.hero-slide__text
 						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
@@ -81,7 +81,7 @@ section.main-hero
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
 							source(srcset="https://www.familybritches.com/wp-content/uploads/2019/07/Depositphotos_5326134_l-2015.jpg" type="image/jpg")
 							
-							img(src="https://www.familybritches.com/wp-content/uploads/2019/07/Depositphotos_5326134_l-2015.jpg", alt="img")
+							img.lazy(src="https://www.familybritches.com/wp-content/uploads/2019/07/Depositphotos_5326134_l-2015.jpg", alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
