--- a/src/pug/sections/_single-product.pug
+++ b/src/pug/sections/_single-product.pug
@@ -34,8 +34,8 @@ section.single-product.pt-md-0
 							source(srcset="./img/laura-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/laura-w375.webp", media="(max-width: 767px)")
 							source(srcset="./img/laura@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="./img/laura.webp" type="image/webp")
-							img(src="./img/laura.webp", width="924" alt="img")
+							
+							img.lazy(src="./img/laura.webp", width="924" alt="img")
 				//=====foto=====
 				.product-foto
 					a(href="./img/hit.webp" data-fancybox="gallery")
@@ -43,8 +43,8 @@ section.single-product.pt-md-0
 							source(srcset="./img/hit-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/hit-w375.webp", media="(max-width: 767px)")
 							source(srcset="./img/hit@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="./img/hit.webp" type="image/webp")
-							img(src="./img/hit.webp", width="450" alt="img")
+							
+							img.lazy(src="./img/hit.webp", width="450" alt="img")
 				//=====foto=====
 				.product-foto
 					a(href="./img/laura.webp" data-fancybox="gallery")
@@ -52,8 +52,8 @@ section.single-product.pt-md-0
 							source(srcset="./img/laura-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/laura-w375.webp", media="(max-width: 767px)")
 							source(srcset="./img/laura@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="./img/laura.webp" type="image/webp")
-							img(src="./img/laura.webp", width="450" alt="img")
+							
+							img.lazy(src="./img/laura.webp", width="450" alt="img")
 				//=====foto=====
 				.product-foto
 					a(href="./img/laura.webp" data-fancybox="gallery")
@@ -61,8 +61,8 @@ section.single-product.pt-md-0
 							source(srcset="./img/laura-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/laura-w375.webp", media="(max-width: 767px)")
 							source(srcset="./img/laura@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="./img/laura.webp" type="image/webp")
-							img(src="./img/laura.webp", width="450" alt="img")
+							
+							img.lazy(src="./img/laura.webp", width="450" alt="img")
 				//=====foto=====
 				.product-foto
 					a(href="./img/hit.webp" data-fancybox="gallery")
@@ -70,8 +70,8 @@ section.single-product.pt-md-0
 							source(srcset="./img/hit-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/hit-w375.webp", media="(max-width: 767px)")
 							source(srcset="./img/hit@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="./img/hit.webp" type="image/webp")
-							img(src="./img/hit.webp", width="450" alt="img")
+							
+							img.lazy(src="./img/hit.webp", width="450" alt="img")
 			
 			//====Правая колонка с описанием =====
 			.single-product__info
