--- a/src/pug/sections/_stores-content.pug
+++ b/src/pug/sections/_stores-content.pug
@@ -187,4 +187,4 @@ section.stores
 			.container
 				//====== ОТОБРАЖЕНИЕ НА КАРТЕ =====
 				.stories-map
-					iframe.lazy(src="https://yandex.ru/map-widget/v1/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&amp;source=constructor" frameborder="0")
+					iframe.lazy(src="https://yandex.ru/map-widget/v1/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&amp;source=constructor" )
