--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -80,6 +80,8 @@ html(lang="ru")
 		
 		//=============== jquery ==================
 		script(src="./libs/jquery/jquery-3.0.0.min.js")
+		script(src="./libs/jquery.lazy.min.js")
+
 		
 		//=============== swiper js ===============
 		script(src="./libs/swiper/swiper.js")
