--- a/src/pug/sections/_technology-content.pug
+++ b/src/pug/sections/_technology-content.pug
@@ -44,7 +44,7 @@ section.technology
 							button.btn-play-wrapper
 								span.btn-play
 							.video-poster
-								img.lazy.img-cover(src="./img/poster.webp")
+								img.lazy.img-cover(src="./img/poster.webp" width="924" height="608" alt="img")
 					//=======single item =====
 					.accordion-header.txt-20 Наши технологии (название ролика 1)
 					.accordion-body
@@ -55,7 +55,7 @@ section.technology
 							button.btn-play-wrapper
 								span.btn-play
 							.video-poster
-								img.lazy.img-cover(src="./img/poster.webp")
+								img.lazy.img-cover(src="./img/poster.webp" width="924" height="608" alt="img")
 					//=======single item =====  
 					.accordion-header.txt-20 Наши технологии (название ролика 1)
 					.accordion-body
@@ -66,7 +66,7 @@ section.technology
 							button.btn-play-wrapper
 								span.btn-play
 							.video-poster
-								img.lazy.img-cover(src="./img/poster.webp")
+								img.lazy.img-cover(src="./img/poster.webp" width="924" height="608" alt="img")
 					//=======single item =====  
 					.accordion-header.txt-20 Наши технологии (название ролика 1)
 					.accordion-body
@@ -77,7 +77,7 @@ section.technology
 							button.btn-play-wrapper
 								span.btn-play
 							.video-poster
-								img.lazy.img-cover(src="./img/poster.webp")
+								img.lazy.img-cover(src="./img/poster.webp" width="924" height="608" alt="img")
 					//=======single item =====  
 					.accordion-header.txt-20 Наши технологии (название ролика 1)
 					.accordion-body
@@ -88,4 +88,4 @@ section.technology
 							button.btn-play-wrapper
 								span.btn-play
 							.video-poster
-								img.lazy.img-cover(src="./img/poster.webp")
+								img.lazy.img-cover(src="./img/poster.webp" width="924" height="608" alt="img")
