--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -51,4 +51,14 @@
 	&:hover{
 		background-color: var(--text-grey-input);
 	}
+	@media (max-width: 767px) {
+		width: 45px;
+		height: 45px;
+		background-size: 11px 11px;
+	}
+}
+.brand-logo{
+	width: 334px;
+	height: 318px;
+	color: var(--text-black);
 }
