--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -30,5 +30,7 @@ block content
 				span Магазины
 			a(href="about.html")
 				span О Бренде
+			a(href="404.html")
+				span Упс...! 404
 block variables
 	-var title = "Start page";
