--- a/src/pug/sections/_about-content.pug
+++ b/src/pug/sections/_about-content.pug
@@ -29,7 +29,7 @@ section.about
 			.container-slim
 				.about-description__img.mb-24
 					.brand-img
-						svg.brand-logo
+						svg.brand-logo.txt-grey
 							use(href='./img/sprite.svg#brand-logo')
 					picture
 						source(srcset="./img/about2-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
