--- a/src/pug/ui/typography.pug
+++ b/src/pug/ui/typography.pug
@@ -124,6 +124,19 @@ html(lang="ru")
 							span Вернуться
 					
 					hr
-					.link-item Элемент ссылки с подчеркиванием
+					.link-item Ссылка с подчеркиванием по наведению
 					pre.
-						.link-item Элемент ссылки с подчеркиванием
+						.link-item Ссылка с подчеркиванием по наведению
+					hr
+					.accent-link Голубая ссылка без подчеркивания
+					pre.
+						.accent-link Голубая ссылка без подчеркивания
+					hr
+					.blue-link Голубая ссылка с подчеркиванием
+					pre.
+						.blue-link Голубая ссылка с подчеркиванием
+					hr
+					.link-text Элемент ссылки с подчеркиванием
+					pre.
+						.link-text Элемент ссылки с подчеркиванием
+					
