--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,6 +34,7 @@
 @import "sections/_contacts-content.scss";
 @import "sections/_stores-content.scss";
 @import "sections/_about-content.scss";
+@import "sections/_page-404.scss";
 
 
 
