--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -9,9 +9,8 @@ section.main-hero
 							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg" type="image/jpg")
-							
-							img.lazy(src="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg", alt="img")
+							img.lazy(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
+					
 					//===== slide text ====
 					.hero-slide__text
 						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
@@ -31,10 +30,8 @@ section.main-hero
 						picture
 							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
-							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="https://static.tildacdn.com/tild3739-3038-4462-b265-353563353332/765xNxcollezione-liu.jpg" type="image/jpg")
-							
-							img.lazy(src="https://static.tildacdn.com/tild3739-3038-4462-b265-353563353332/765xNxcollezione-liu.jpg", alt="img")
+							source(srcset="./img/main-slider/slide2@2x.webp", media="(min-resolution: 192dpi)")
+							img.lazy(src="./img/main-slider/slide2.webp", width="1920" height="1080" alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
@@ -56,9 +53,7 @@ section.main-hero
 							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg" type="image/jpg")
-							
-							img.lazy(src="https://likewot.ru/wp-content/uploads/1/b/b/1bb7a69f621d5c2122abb5eb441c801b.jpeg", alt="img")
+							img.lazy(src="./img/main-slider/slide.webp", width="1920" height="1080" alt="img")
 					//===== slide text ====
 					.hero-slide__text
 						.h1-serif(data-swiper-parallax-y="200") Коллекция NorthBloom Лето 2024
@@ -79,9 +74,7 @@ section.main-hero
 							source(srcset="./img/main-slider/slide-w370@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
 							source(srcset="./img/main-slider/slide-w370.webp", media="(max-width: 767px)")
 							source(srcset="./img/main-slider/slide@2x.webp", media="(min-resolution: 192dpi)")
-							source(srcset="https://www.familybritches.com/wp-content/uploads/2019/07/Depositphotos_5326134_l-2015.jpg" type="image/jpg")
-							
-							img.lazy(src="https://www.familybritches.com/wp-content/uploads/2019/07/Depositphotos_5326134_l-2015.jpg", alt="img")
+							img.lazy(src="./img/main-slider/slide2.webp", width="1920" height="1080" alt="img")
 					
 					//===== slide text ====
 					.hero-slide__text
