edit-modal-script

--- a/src/pug/pages/404.pug
+++ b/src/pug/pages/404.pug
@@ -24,8 +24,9 @@ block content
 							use(href='./img/sprite.svg#brand-logo')
 						span 4
 					.txt-24.mb-16  К сожалению, запрашиваемой страницы на сайте нет.
-					a(href="index.html").blue-link.mb-8 Главная страница
-					a(href="catalogy.html").blue-link Каталог товаров
+					.links-column
+						a(href="index.html").blue-link Главная страница
+						a(href="catalogy.html").blue-link Каталог товаров
 					a(href="#!" data-target="modal-support").blue-link.mt-40 Сообщить об ошибке
 
 		//=========MODAL SUPPORT (открывается по клику на элемент с data-target="modal-support")======
