--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -32,5 +32,7 @@ block content
 				span О Бренде
 			a(href="404.html")
 				span Упс...! 404
+			a(href="success-form-support.html")
+				span Успешная отправка формы
 block variables
 	-var title = "Start page";
