--- a/src/pug/blocks/_modal-success-support.pug
+++ b/src/pug/blocks/_modal-success-support.pug
@@ -1,4 +1,3 @@
-//=========MODAL SUCCESS SEND FORM =======
 //=====окно отображается за счет класса active===
 .modal-wrapper.active.modal-wrapper--simple
 	.modal-body.bg-grey.form-wrapper
@@ -8,4 +7,7 @@
 				use(href='./img/sprite.svg#svg-close')
 		.modal-body__content
 			+svg-icon('check')(class="check--big")
-			.title Ваша заявка<br>принята!
+			.title Спасибо за Вашу<br>помощь сделать наш сайт<br>лучше!
+			.links-column
+				a(href="index.html").blue-link Главная страница
+				a(href="catalogy.html").blue-link Каталог товаров
