edit-success-modal

--- a/src/pug/blocks/_modal-success-support.pug
+++ b/src/pug/blocks/_modal-success-support.pug
@@ -1,5 +1,5 @@
 //=====окно отображается за счет класса active===
-.modal-wrapper.active.modal-wrapper--simple
+.modal-wrapper.active.modal-wrapper--success
 	.modal-body.bg-grey.form-wrapper
 		//===btn close popup ===
 		button(type="button" data-role="modal-close").btn-close
@@ -7,7 +7,7 @@
 				use(href='./img/sprite.svg#svg-close')
 		.modal-body__content
 			+svg-icon('check')(class="check--big")
-			.title Спасибо за Вашу<br>помощь сделать наш сайт<br>лучше!
+			.title Спасибо за Вашу<br>помощь сделать наш сайт лучше!
 			.links-column
 				a(href="index.html").blue-link Главная страница
 				a(href="catalogy.html").blue-link Каталог товаров
