--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -34,5 +34,7 @@ block content
 				span Упс...! 404
 			a(href="success-form-support.html")
 				span Успешная отправка формы
+			a(href="size-page.html")
+				span Таблицы размеров
 block variables
 	-var title = "Start page";
