--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,6 +35,7 @@
 @import "sections/_stores-content.scss";
 @import "sections/_about-content.scss";
 @import "sections/_page-404.scss";
+@import "sections/_size-page.scss";
 
 
 
