--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -138,12 +138,16 @@ input[type="submit"] {
 .inner-main{
 	background-color: #fff;
 	padding-top: 64px;
-	padding-bottom: 80px;
+	padding-bottom: 160px;
 	section {
 			padding-top: 16px;
 		}
+	@media (max-width: 1199px) {
+		padding-bottom: 120px;
+	}
 	@media (max-width: 767px) {
 		padding-top: 56px;
+		
 	}
 }
 .page-wrapper{
