remove-ss-scroll

--- a/src/pug/blocks/_modal-table-size.pug
+++ b/src/pug/blocks/_modal-table-size.pug
@@ -22,7 +22,7 @@ mixin tableRows(values, numRows)
 			p Размерная сетка курток NorthBloom соответствует российским стандартным размерам одежды.
 			p Предложенные таблицы помогут Вам подобрать куртку подходящего размера.
 		.h2.mb-24 Женщины
-		.size-table-inner.ss-container(ss-container)
+		.size-table-inner.scroll-wrapper
 			table.size-table
 				thead
 					tr
