--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -92,7 +92,7 @@
 	border-bottom:1px solid transparent;
 	display: inline;
 	&:hover{
-		border-bottom: 1px solid currentColor;
+		opacity: 0.7;
 	}
 }
 .accent-link, .blue-link{
@@ -100,11 +100,9 @@
 }
 .blue-link{
 	transition: .3s;
-	
 	border-bottom: 1px solid currentColor;
 	display: inline-block;
 	
-
 	&:hover {
 		opacity: .7;
 	}
@@ -122,7 +120,7 @@
 	text-decoration-skip-ink: none;
 	
 	&:hover {
-		text-decoration: none;
+		opacity: .7;
 	}
 }
 
