--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -36,5 +36,7 @@ block content
 				span Успешная отправка формы
 			a(href="size-page.html")
 				span Таблицы размеров
+			a(href="manual-page.html")
+				span Инструкция по уходу
 block variables
 	-var title = "Start page";
