--- a/src/pug/sections/_about-content.pug
+++ b/src/pug/sections/_about-content.pug
@@ -10,8 +10,8 @@ section.about
 					svg.svg-chevron-left
 						use(href='./img/sprite.svg#svg-chevron-left')
 					span Вернуться
-		
-		h1.h1-serif.txt-center Производитель качественной верхней одежды "NorthBloom" из Санкт-Петербурга
+		.section-title.section-title--center
+			h1.h1-serif.txt-center Производитель качественной верхней одежды "NorthBloom" из Санкт-Петербурга
 		.about-hero
 			picture
 				source(srcset="./img/about-w375@2x.webp", media="(max-width: 767px) and (min-resolution: 192dpi)")
