--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -78,7 +78,13 @@ ul {
 	padding: 0;
 	list-style-type: none;
 }
-
+ol{
+	margin: 0;
+	padding: 0;
+	margin-left: 16px;
+	li{padding-left: 8px;}
+	li +li{margin-top: 12px;}
+}
 h1,
 h2,
 h3,
