--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,7 @@
 @import "sections/_about-content.scss";
 @import "sections/_page-404.scss";
 @import "sections/_size-page.scss";
+@import "sections/_manual-content.scss";
 
 
 
