--- a/src/scss/sections/_about-content.scss
+++ b/src/scss/sections/_about-content.scss
@@ -1,7 +1,6 @@
 .about{
-	.h1-serif{
+	.section-title.section-title--center{
 		width: min(1015px, 100%);
-		margin-inline: auto;
 		margin-bottom: 40px;
 	}
 	&-description__title{
@@ -66,17 +65,7 @@
 		height: 27px;
 	}
 }
-.grey-card{
-	margin-top: 16px;
-	background: var(--bg-bg-grey);
-	padding: 32px 40px 48px;
-	&>*+*{margin-top: 16px;}
-	@media (max-width: 767px) {
-		padding-left: 16px;
-		padding-right: 16px;
-		
-	}
-}
+
 .about-description__text{
 	@media (max-width: 767px) {
 		
