--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,7 +4,7 @@ block content
 	.start-page
 		h1 North Bloom
 		.start-page__cards
-			a(href="../ui/colors.html") UI-KIT PAGE
+			//- a(href="../ui/colors.html") UI-KIT PAGE
 			
 			a(href="main.html")
 				span Главная
