--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -11,7 +11,7 @@ block content
 
 		
 		include ../sections/_footer
-		include ../blocks/_cooki-popup
+		//- include ../blocks/_cooki-popup
 
 
 block variables
