--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -81,8 +81,8 @@ html(lang="ru")
 
 		
 		//=============== swiper js ===============
-		script(src="./libs/swiper/swiper.js")
-		
+		//- script(src="./libs/swiper/swiper.js")
+		script(src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js")
 		//============fancybox====================
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js")
 		//=============== main js ===================
