--- a/src/pug/sections/_main-hero.pug
+++ b/src/pug/sections/_main-hero.pug
@@ -90,3 +90,4 @@ section.main-hero
 									use(href='./img/sprite.svg#svg-chevron-right')
 
 		.main-hero-pagination.swiper-pagination
+		.swiper-rect
