--- a/src/scss/sections/_main-hero.scss
+++ b/src/scss/sections/_main-hero.scss
@@ -50,3 +50,48 @@
 		}
 	}
 }
+
+
+
+ .swiper-rect {
+ 	position: absolute;
+ 	top: 0;
+ 	height: 100%;
+ 	width: 440px;
+	background: linear-gradient(90deg,#E3000F 30%, #2e394d 30%, #2e394d 100%,);
+ 	z-index: 10;
+ 	display: none;
+	
+ }
+
+ @keyframes slideRectForward {
+ 	0%{
+ 		transform: translateX(0);
+		
+ 	}
+	80%{
+		width: 360px;
+	}
+ 	100% {
+ 		transform: translateX(calc(100vw - 100%));
+		
+		width: 0;
+ 		/* Moving the entire width of the swiper */
+ 	}
+ }
+
+ @keyframes slideRectBackward {
+ 	0% {
+ 		transform: translateX(calc(100vw - 100%));
+		
+ 	}
+	80% {
+		width: 360px;
+	}
+ 	100%{
+ 		transform: translateX(0);
+		
+		width: 0;
+ 		/* Moving the entire width of the swiper */
+ 	}
+ }
